adding new react portfolio project and AOS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
         <link rel="stylesheet" href="app.css" /> 
+        <link rel="stylesheet" href="node_modules/aos/dist/aos.css" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-TJRCVF92X6"></script>
@@ -80,7 +81,7 @@
           <!-- BTSL NEW ZEALAND -->
           <div class="row my-5 pt-5 portfolio-item">
 
-            <div class="col-12 col-lg-6 order-2 order-lg-2">
+            <div data-aos="fade-left" class="col-12 col-lg-6 order-2 order-lg-2">
               <h3 class="mb-3">BTSL</h3>
               <p>
                 BTSL are one of New Zealand's largest construction tendering sites. I worked with a back-end developer and a designer to update their platform.
@@ -98,11 +99,11 @@
                   <li>Bootstrap</li>
                   <li>Laravel Framework</li>
                 </ul>
-                <a href="https://workdesk.btsl.co.nz/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
+                <a data-aos="flip-down" href="https://workdesk.btsl.co.nz/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
               </div>
             </div>
 
-            <div class="col-12 col-lg-6 altra order-1 order-lg-1">
+            <div data-aos="fade-right" class="col-12 col-lg-6 altra order-1 order-lg-1">
               <picture>
                 <source srcset="..\img\btsl-nz.webp" type="image/webp">
                 <source srcset="..\img\btsl-nz.png" type="image/png"> 
@@ -118,7 +119,7 @@
           <!-- FLEX POWER SOLUTIONS -->
           <div class="row portfolio-item mb-5">
 
-            <div class="col-12 col-lg-6 order-2 order-lg-1">
+            <div data-aos="fade-right" class="col-12 col-lg-6 order-2 order-lg-1">
               <h3 class="mb-3">Flex Power Solutions</h3>
               <p>
                 This Irish company are on a mission to make a cleaner, energy-efficient future for Ireland. Flex Power Solutions needed a website design to communicate the benefits of diverting excess renewable energy into high-efficiency heat and steam generation. 
@@ -136,11 +137,11 @@
                   <li>Bootstrap</li>
                   <li>Laravel Framework</li>
                 </ul>
-                <a href="https://www.flexpowersolutions.com/" class="btn btn-outline-dark rounded-0 text-uppercase mb-5 mt-3" target="_blank">View live project</a>
+                <a data-aos="flip-down" href="https://www.flexpowersolutions.com/" class="btn btn-outline-dark rounded-0 text-uppercase mb-5 mt-3" target="_blank">View live project</a>
               </div>
             </div>
 
-            <div class="col-12 col-lg-6 flexpower order-1 order-lg-2 mb-5 mb-lg-0">
+            <div data-aos="fade-left" class="col-12 col-lg-6 flexpower order-1 order-lg-2 mb-5 mb-lg-0">
               <img src="..\img\flex-power-solutions.png" class="img-fluid" alt="Flex Power Solutions">
               <div class="bg-object"></div>
             </div>
@@ -152,7 +153,7 @@
           <!-- HELLO ALTRA -->
           <div class="row my-5 pt-5 portfolio-item">
 
-            <div class="col-12 col-lg-6 order-2 order-lg-2">
+            <div data-aos="fade-right" class="col-12 col-lg-6 order-2 order-lg-2">
               <h3 class="mb-3">Hello Altra</h3>
               <p>
                 Altra needed a new website design with a fast load speed to inform their clients of a new web app they have developed for the nursing home sector to connect families with residents during the pandemic.  
@@ -169,11 +170,11 @@
                   <li>JavaScript</li>
                   <li>Bootstrap</li>
                 </ul>
-                <a href="https://www.helloaltra.com/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
+                <a data-aos="flip-down" href="https://www.helloaltra.com/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
               </div>
             </div>
 
-            <div class="col-12 col-lg-6 altra order-1 order-lg-1">
+            <div data-aos="fade-right" class="col-12 col-lg-6 altra order-1 order-lg-1">
               <picture>
 
                 <img src="..\img\hello-altra.png" class="img-fluid" alt="Hello Altra">
@@ -187,7 +188,7 @@
 
           <!-- GRADIENT -->
           <div class="row portfolio-item">
-            <div class="col-12 col-lg-6 order-2 order-lg-1">
+            <div data-aos="fade-right" class="col-12 col-lg-6 order-2 order-lg-1">
               <h3 class="mb-3">Gradient</h3>
               <p>
                 The National College of Art and Design uses an alpha grade system for their assessments. This easy-to-use tool allows staff to save time by calculating the overall average grade for up to four assessment criteria.
@@ -205,10 +206,11 @@
                     <li>JavaScript</li>
                   </ul>
                 </div>
-                <a href="https://gradient.loganmclain.com/" class="btn btn-outline-dark rounded-0 text-uppercase my-2" target="_blank">View live project</a>
-                <a href="https://github.com/Sloggiebear/Gradient" class="btn btn-outline-dark rounded-0 text-uppercase m-2" target="_blank">View on Github</a>
+                <a data-aos="flip-down" href="https://gradient.loganmclain.com/" class="btn btn-outline-dark rounded-0 text-uppercase my-2" target="_blank">View live project</a>
+                <a data-aos="flip-down" href="https://github.com/Sloggiebear/Gradient" class="btn btn-outline-dark rounded-0 text-uppercase m-2" target="_blank">View on Github</a>
             </div>
-            <div class="col-12 col-lg-6 gradient order-1 order-lg-2">
+
+            <div data-aos="fade-left" class="col-12 col-lg-6 gradient order-1 order-lg-2">
               <img src="..\img\gradient-screens.png" class="img-fluid" alt="Gradient">
               <div class="bg-object"></div>
             </div>
@@ -271,7 +273,7 @@
             </div>
             
             <div class="col-12 col-lg-6 mb-4">
-              <div class="hoverbox" style="background-image: url('/img/nigel.jpg');" title="Nigel Cheney Website Design">
+              <div class="hoverbox" style="background-image: url('/img/nigel.webp');" title="Nigel Cheney Website Design">
                 <div id="hoverbox-title" class="hoverbox-title">Nigel Cheney</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
                   <h3 class="mb-2">Nigel Cheney</h3>
@@ -281,19 +283,30 @@
               </div>
             </div>
 
-            <div class="col-12 col-lg-6 mb-4">
-              <div class="hoverbox" style="background-image: url('/img/to-do.jpg');" title="To Do List">
+            <div class="col-12 col-lg-4 mb-4">
+              <div class="hoverbox" style="background-image: url('/img/calc.webp');" title="Your Geography Sux Bro">
+                <div id="hoverbox-title" class="hoverbox-title">React Calculator</div>
+                <div id="hoverboxcontent" class="hoverbox-content">
+                  <h3 class="mb-2">React Calculator</h3>
+                  <p>A simple calculator built with React deployed on Firebase.</p>
+                  <a href="https://portfolio-react-calculator.web.app/" class="btn btn-outline-light rounded-0 text-uppercase mt-3" target="_blank">View live project</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-lg-4 mb-4">
+              <div class="hoverbox" style="background-image: url('/img/to-do.webp');" title="To Do List">
                 <div id="hoverbox-title" class="hoverbox-title">To Do List</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
-                  <h3 class="mb-2">To Do List</h3>
+                  <h3 class="mb-2">Javascript To Do List</h3>
                   <p>A canonical addition to any developer's portfolio, a standard vanilla javascript to-do list.</p>
                   <a href="https://todo.amberandemerald.com" class="btn btn-outline-light rounded-0 text-uppercase mt-3" target="_blank">View live project</a>
                 </div>
               </div>
             </div>
 
-            <div class="col-12 col-lg-6 mb-4">
-              <div class="hoverbox" style="background-image: url('/img/geo.jpg');" title="Your Geography Sux Bro">
+            <div class="col-12 col-lg-4 mb-4">
+              <div class="hoverbox" style="background-image: url('/img/geo.webp');" title="Your Geography Sux Bro">
                 <div id="hoverbox-title" class="hoverbox-title">Your Geography Sux, Bro</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
                   <h3 class="mb-2">Your Geography Sux, Bro</h3>
@@ -316,7 +329,7 @@
               <div class="col-12 col-lg-5 offset-lg-7 py-5" >
                 <span class="subhead">What I can do for you</span>
                 <h2 class="display-1">Services</h2>
-                  <p>I provide front-end web development which ranges from wordpress websites to fully bespoke solutions. I also do graphic and print design. I have good attention to detail and I communicate efficiently. I don't commit to projects if I cannot deliver them to a high standard.</p>
+                  <p>I provide front-end web development using HTML, CSS, JavaScript and React. I can also set up wordpress websites that can be customised for your business. I have good attention to detail and I communicate efficiently. I don't commit to projects if I cannot deliver them to a high standard.</p>
               </div>
             </div>
           </div>
@@ -325,7 +338,7 @@
           <section class="container">
             <div class="row pt-5 pb-3 pb-lg-5">
               <div class="col-12 col-lg-6 order-2">
-                <h5 class="subhead">Wordpress and e-Commerce Websites</h5>
+                <h5 class="subhead">e-Commerce Websites</h5>
                 <h2 class="mb-5">for Small/Medium Organisations</h2>
                 <p>
                   Are you looking for to get a <strong>business website design in Ireland</strong>? Get the best out of the internet with a small business website. Promote your unique selling point, establish your brand and grow your online presence. The small business websites is custom designed for small businesses and start-ups requiring a professional business website with a content management system.
@@ -451,5 +464,12 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <script src="app.js"></script>
+
+    <script src="./node_modules/aos/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1200,
+      });
+    </script>
     </body>
 </html>
