--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <!-- BTSL NEW ZEALAND -->
           <div class="row my-5 pt-5 portfolio-item">
 
-            <div data-aos="fade-left" class="col-12 col-lg-6 order-2 order-lg-2">
+            <div data-aos="fade-right" class="col-12 col-lg-6 order-2 order-lg-2">
               <h3 class="mb-3">BTSL</h3>
               <p>
                 BTSL are one of New Zealand's largest construction tendering sites. I worked with a back-end developer and a designer to update their platform.
@@ -97,13 +97,12 @@
                   <li>SCSS</li>
                   <li>JavaScript</li>
                   <li>Bootstrap</li>
-                  <li>Laravel Framework</li>
                 </ul>
-                <a data-aos="flip-down" href="https://workdesk.btsl.co.nz/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
+                <a data-aos="fade-up" href="https://workdesk.btsl.co.nz/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
               </div>
             </div>
 
-            <div data-aos="fade-right" class="col-12 col-lg-6 altra order-1 order-lg-1">
+            <div data-aos="fade-left" class="col-12 col-lg-6 altra order-1 order-lg-1">
               <picture>
                 <source srcset="..\img\btsl-nz.webp" type="image/webp">
                 <source srcset="..\img\btsl-nz.png" type="image/png"> 
@@ -134,10 +133,8 @@
                   <li>HTML</li>
                   <li>SCSS</li>
                   <li>JavaScript</li>
-                  <li>Bootstrap</li>
-                  <li>Laravel Framework</li>
                 </ul>
-                <a data-aos="flip-down" href="https://www.flexpowersolutions.com/" class="btn btn-outline-dark rounded-0 text-uppercase mb-5 mt-3" target="_blank">View live project</a>
+                <a data-aos="fade-up" href="https://www.flexpowersolutions.com/" class="btn btn-outline-dark rounded-0 text-uppercase mb-5 mt-3" target="_blank">View live project</a>
               </div>
             </div>
 
@@ -153,7 +150,7 @@
           <!-- HELLO ALTRA -->
           <div class="row my-5 pt-5 portfolio-item">
 
-            <div data-aos="fade-right" class="col-12 col-lg-6 order-2 order-lg-2">
+            <div data-aos="fade-left" class="col-12 col-lg-6 order-2 order-lg-2">
               <h3 class="mb-3">Hello Altra</h3>
               <p>
                 Altra needed a new website design with a fast load speed to inform their clients of a new web app they have developed for the nursing home sector to connect families with residents during the pandemic.  
@@ -170,7 +167,7 @@
                   <li>JavaScript</li>
                   <li>Bootstrap</li>
                 </ul>
-                <a data-aos="flip-down" href="https://www.helloaltra.com/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
+                <a data-aos="fade-up" href="https://www.helloaltra.com/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
               </div>
             </div>
 
@@ -206,8 +203,8 @@
                     <li>JavaScript</li>
                   </ul>
                 </div>
-                <a data-aos="flip-down" href="https://gradient.loganmclain.com/" class="btn btn-outline-dark rounded-0 text-uppercase my-2" target="_blank">View live project</a>
-                <a data-aos="flip-down" href="https://github.com/Sloggiebear/Gradient" class="btn btn-outline-dark rounded-0 text-uppercase m-2" target="_blank">View on Github</a>
+                <a data-aos="fade-up" href="https://gradient.loganmclain.com/" class="btn btn-outline-dark rounded-0 text-uppercase my-2" target="_blank">View live project</a>
+                <a data-aos="fade-up" href="https://github.com/Sloggiebear/Gradient" class="btn btn-outline-dark rounded-0 text-uppercase m-2" target="_blank">View on Github</a>
             </div>
 
             <div data-aos="fade-left" class="col-12 col-lg-6 gradient order-1 order-lg-2">
@@ -229,7 +226,7 @@
 
           <div class="row">
 
-            <div class="col-12 col-lg-4 mb-4">
+            <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
               <div class="hoverbox" style="background-image: url('/img/wine.jpg');" title="Bromptom Wine Website Design">
                 <div id="hoverbox-title" class="hoverbox-title">Bromptom Wine</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
@@ -239,7 +236,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-4 mb-4">
+            <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
               <div class="hoverbox" style="background-image: url('/img/cafc.jpg');" title="CAFC Website Design">
                 <div id="hoverbox-title" class="hoverbox-title">CAFC</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
@@ -250,7 +247,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-lg-4 mb-4">
+            <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
               <div class="hoverbox" style="background-image: url('/img/superg.jpg');" title="The Super Website Design">
                 <div id="hoverbox-title" class="hoverbox-title">The Super Generation</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
@@ -261,7 +258,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-lg-6 mb-4">
+            <div data-aos="fade-left" class="col-12 col-lg-6 mb-4">
               <div class="hoverbox" style="background-image: url('/img/leonandcroft.jpg');" title="Leon and Croft Website Design">
                 <div id="hoverbox-title" class="hoverbox-title">Leon and Croft</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
@@ -272,7 +269,7 @@
               </div>
             </div>
             
-            <div class="col-12 col-lg-6 mb-4">
+            <div data-aos="fade-right" class="col-12 col-lg-6 mb-4">
               <div class="hoverbox" style="background-image: url('/img/nigel.webp');" title="Nigel Cheney Website Design">
                 <div id="hoverbox-title" class="hoverbox-title">Nigel Cheney</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
@@ -283,18 +280,18 @@
               </div>
             </div>
 
-            <div class="col-12 col-lg-4 mb-4">
+            <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
               <div class="hoverbox" style="background-image: url('/img/calc.webp');" title="Your Geography Sux Bro">
                 <div id="hoverbox-title" class="hoverbox-title">React Calculator</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
                   <h3 class="mb-2">React Calculator</h3>
-                  <p>A simple calculator built with React deployed on Firebase.</p>
+                  <p>A simple calculator built with React<br>and deployed on Firebase.</p>
                   <a href="https://portfolio-react-calculator.web.app/" class="btn btn-outline-light rounded-0 text-uppercase mt-3" target="_blank">View live project</a>
                 </div>
               </div>
             </div>
 
-            <div class="col-12 col-lg-4 mb-4">
+            <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
               <div class="hoverbox" style="background-image: url('/img/to-do.webp');" title="To Do List">
                 <div id="hoverbox-title" class="hoverbox-title">To Do List</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
@@ -305,7 +302,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-lg-4 mb-4">
+            <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
               <div class="hoverbox" style="background-image: url('/img/geo.webp');" title="Your Geography Sux Bro">
                 <div id="hoverbox-title" class="hoverbox-title">Your Geography Sux, Bro</div>
                 <div id="hoverboxcontent" class="hoverbox-content">
