Adding TFB project

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <h1 class="subhead pt-5">Website Design & Web Development Ireland</h1>
               <h2 class="py-3 m-0 fw-bolder display-1">Hey there,<br>My name is Logan</h2>
               <hr class="my-5 short-line" />
-              <p class="m-0">I'm a freelance front-end web developer and designer based in Dublin, Ireland.</p>
+              <p class="m-0">I'm a freelance frontend web developer and designer based in Dublin, Ireland.</p>
             </div>
           </div>
         </header>
@@ -78,18 +78,23 @@
             </div>
           </div>
 
-          <!-- BTSL NEW ZEALAND -->
           <div class="row my-5 pt-5 portfolio-item">
-
-            <div data-aos="fade-right" class="col-12 col-lg-6 order-2 order-lg-2">
-              <h3 class="mb-3">BTSL</h3>
+            
+            <!-- BTSL NEW ZEALAND -->
+            <div data-aos="fade-right" class="col-12 col-lg-5  offset-lg-1 order-2 order-lg-2">
+              <picture>
+                <source srcset="..\img\btsl-nz.webp" type="image/webp">
+                <source srcset="..\img\btsl-nz.jpg" type="image/jpeg"> 
+                <img src="..\img\btsl-nz.png" class="img-fluid mb-3" alt="BTSL New Zealand">
+              </picture>
+              <h3 class="mb-3">Building Tendering Service Ltd.</h3>
               <p>
-                BTSL are one of New Zealand's largest construction tendering sites. I worked with a back-end developer and a designer to update their platform.
+                BTSL are one of New Zealand's largest construction tendering sites providing a digital platform for contracters.
               </p>
               <div class="tech">
                 <p class="subhead">Technical Overview</p>
                 <p>
-                  I used a combination of HTML5, Bootstrap and custom CSS to create a range of front and back-end user interfaces including features like document uploads, document management and project searches. The UIs made use of modals and expandable elements to keep things clean and organised. The platform was updated onto the Laravel framework for both main-contractor and sub-contractor sites. 
+                  Bootstrap/SCSS and Javascript used to create user interfaces for features like document uploads/management and project searches. The UIs made use of modals and expandable elements for optimal organisation. 
                 </p>
                 <span>Technologies used</span>
                 <ul>
@@ -102,16 +107,36 @@
               </div>
             </div>
 
-            <div data-aos="fade-left" class="col-12 col-lg-6 altra order-1 order-lg-1">
+            <!-- THE FAT BADGER RESTAURANT -->
+            <div data-aos="fade-left" class="col-12 col-lg-5 order-1 order-lg-1">
               <picture>
-                <source srcset="..\img\btsl-nz.webp" type="image/webp">
-                <source srcset="..\img\btsl-nz.png" type="image/png"> 
-                <img src="..\img\btsl-nz.png" class="img-fluid" alt="BTSL New Zealand Text!">
+                <source srcset="..\img\the-fat-badger-restaurant.webp" type="image/webp">
+                <source srcset="..\img\the-fat-badger-restaurant.jpgp" type="image/jpeg"> 
+                <img src="..\img\the-fat-badger-restaurant.jpgp" class="img-fluid mb-3" alt="The Fat Badger Restaurant">
               </picture>
-              <div class="bg-object"></div>
+              <h3 class="mb-3">The Fat Badger Restaurant</h3>
+              <p>
+                The Fat Badger Restaurant is one of the many UK-based resturants owned and operated by the Gladwin Brothers.
+              </p>
+              <div class="tech">
+                <p class="subhead">Technical Overview</p>
+                <p>
+                  These site uses WEPB image formats to reduce load time and OWL carosels for responsive galleries. The structure is HTML5, Bootstrap/Custom CSS and jaavscript behaviours for desktop and mobile. 
+                </p>
+                <span>Technologies used</span>
+                <ul>
+                  <li>HTML/SCSS</li>
+                  <li>OWL JS</li>
+                  <li>JavaScript</li>
+                  <li>Bootstrap</li>
+                </ul>
+                <a data-aos="fade-up" href="https://workdesk.btsl.co.nz/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
+              
             </div>
 
-          </div>
+            </div>
+
+          </div>  
 
           <hr class="my-5">
 
