--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <li>JavaScript</li>
                   <li>Bootstrap</li>
                 </ul>
-                <a data-aos="fade-up" href="https://workdesk.btsl.co.nz/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
+                <a data-aos="fade-up" href="https://www.thefatbadger-restaurant.com/" class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5" target="_blank">View live project</a>
               
             </div>
 
