--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <section class="container">
         <div class="row pb-5 my-lg-5">
           <div class="col-12 py-lg-5 pt-5" id="projects">
-            <h2 class="mt-5 subhead">Website Design & Development Projects</h2>
-            <span class="display-2 heading">Recent Projects</span>
+            <h2 class="mt-5 subhead">Frontend Web Developer, Dublin</h2>
+            <span class="display-2 heading">Commercial Projects</span>
           </div>
         </div>
 
@@ -288,24 +288,30 @@
 
         <hr class="my-5" />
 
-        <!-- HELLO ALTRA -->
         <div class="row my-5 pt-5 portfolio-item">
-          <div data-aos="fade-left" class="col-12 col-lg-6 order-2 order-lg-2">
+          
+          <!-- HELLO ALTRA -->
+          <div data-aos="fade-right" class="col-12 col-lg-5">
+            <picture>
+              <img
+                src="..\img\hello-altra.png"
+                class="img-fluid"
+                alt="Hello Altra"
+              />
+            </picture>
+            <div class="bg-object"></div>
             <h3 class="mb-3">Hello Altra</h3>
             <p>
-              Altra needed a new website design with a fast load speed to inform
-              their clients of a new web app they have developed for the nursing
-              home sector to connect families with residents during the
-              pandemic.
+              Altra needed a website with a fast load speed to inform their
+              clients of a new web app they developed for the nursing home
+              sector.
             </p>
             <div class="tech">
               <p class="subhead">Technical Overview</p>
               <p>
-                My role was to take the Adobe XD website design files provided
-                by their designer and convert them into a fully functional,
-                front-end build with Google Analytics and Calendy integration. I
-                used bootstrap for responsive elements and worked with a backend
-                developer who integrated my code into a Laravel setup.
+                My role was to convert the Adobe XD website design files and
+                convert them into a semantic front-end build using Bootstrap
+                with Google Analytics and Calendy integration.
               </p>
               <span>Technologies used</span>
               <ul>
@@ -319,23 +325,48 @@
                 href="https://www.helloaltra.com/"
                 class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5"
                 target="_blank"
-                >View live project</a
+                >View project</a
               >
             </div>
           </div>
 
-          <div
-            data-aos="fade-right"
-            class="col-12 col-lg-6 altra order-1 order-lg-1"
-          >
+          <!-- BROMPTON -->
+          <div data-aos="fade-left" class="col-12 col-lg-5 offset-lg-1">
             <picture>
               <img
-                src="..\img\hello-altra.png"
-                class="img-fluid"
-                alt="Hello Altra"
+                src="..\img\bromton-wine.webp"
+                class="img-fluid pb-2"
+                alt="Brompton WIne"
               />
             </picture>
             <div class="bg-object"></div>
+            <h3 class="mb-3">Bromptom Wine</h3>
+            <p>
+              A UK-based winery selling products and services including
+              training.
+            </p>
+            <div class="tech">
+              <p class="subhead">Technical Overview</p>
+              <p>
+                My role was to use Bootstrap to write the front end of the
+                website with integrated store and also the backend of the admin
+                pages to allow the owner to add new products and events.
+              </p>
+              <span>Technologies used</span>
+              <ul>
+                <li>HTML</li>
+                <li>SCSS</li>
+                <li>JavaScript</li>
+                <li>Bootstrap</li>
+              </ul>
+              <a
+                data-aos="fade-up"
+                href="https://www.bromptonwine.co.uk"
+                class="btn btn-outline-dark rounded-0 text-uppercase mt-3 mb-5"
+                target="_blank"
+                >View Live project</a
+              >
+            </div>
           </div>
         </div>
 
@@ -399,163 +430,59 @@
         </div>
       </section>
 
-      <!-- OTHER PROJECTS SECTION -->
+      <!-- PERSONAL PROJECTS SECTION -->
 
       <section class="container">
         <div class="row pb-5 my-lg-5">
-          <div class="col-12 py-lg-5" id="projects">
-            <h2 class="mt-5 display-1">Other Projects</h2>
+          <div class="col-12 py-lg-5">
+            <h3 class="mt-5 subhead">Website Designer and Developer, Dublin</h3>
+            <h2 class="display-1">Personal Projects</h2>
           </div>
         </div>
 
         <div class="row">
-          <div class="row mb-4">
-            <div data-aos="fade-right" class="col-12 col-lg-4">
-              <div class="owl-carousel">
-                <div>Your Content</div>
-                <div>Your Content</div>
-                <div>Your Content</div>
-                <div>Your Content</div>
-                <div>Your Content</div>
-                <div>Your Content</div>
-                <div>Your Content</div>
+          <div data-aos="fade-right" class="col-12 position-relative">
+            <div class="owl-carousel owl-theme">
+              <div class="item bg-pink">
+                <picture>
+                  <source srcset="/img/takeaway-1.webp" type="image/webp" />
+                  <img class="takeaway-img" src="/img/takeaway-1.png" />
+                </picture>
+              </div>
+              <div class="item bg-yellow">
+                <picture>
+                  <source srcset="/img/takeaway-2.webp" type="image/webp" />
+                  <img class="takeaway-img" src="/img/takeaway-2.png" />
+                </picture>
+              </div>
+              <div class="item bg-blue">
+                <picture>
+                  <source srcset="/img/takeaway-3.webp" type="image/webp" />
+                  <img class="takeaway-img" src="/img/takeaway-3.png" />
+                </picture>
+              </div>
+              <div class="item bg-purple">
+                <picture>
+                  <source srcset="/img/takeaway-4.webp" type="image/webp" />
+                  <img class="takeaway-img" src="/img/takeaway-4.png" />
+                </picture>
               </div>
             </div>
-            <div data-aos="fade-left" class="col-12 col-lg-8">
-              <h3 class="mb-2">Five Gurls Vegan Takeaway</h3>
+            <div data-aos="fade-down" class="slider-overlay">
+              <h3 class="mb-2">Vegan Takeaway</h3>
               <p>
-                Website design and front-end development for a UK-based wine
-                store and wine training business.
+                This responsive website is dynamcailly generated using vanilla
+                javascript by importing a JSON file with product names, prices
+                and stock status.
               </p>
               <a
-                href="https://www.bromptonwine.co.uk"
-                class="btn btn-outline-light rounded-0 text-uppercase mt-3"
+                href="https://takeaway.amberandemerald.com"
+                class="btn btn-outline-light rounded-0 text-uppercase my-3"
                 target="_blank"
                 >View live project</a
               >
             </div>
           </div>
-
-          <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
-            <div
-              class="hoverbox"
-              style="background-image: url('/img/wine.jpg')"
-              title="Bromptom Wine Website Design"
-            >
-              <div id="hoverbox-title" class="hoverbox-title">
-                Bromptom Wine
-              </div>
-              <div id="hoverboxcontent" class="hoverbox-content">
-                <h3 class="mb-2">Bromptom Wine</h3>
-                <p>
-                  Website design and front-end development for a UK-based wine
-                  store and wine training business.
-                </p>
-                <a
-                  href="https://www.bromptonwine.co.uk"
-                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
-                  target="_blank"
-                  >View live project</a
-                >
-              </div>
-            </div>
-          </div>
-          <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
-            <div
-              class="hoverbox"
-              style="background-image: url('/img/cafc.jpg')"
-              title="CAFC Website Design"
-            >
-              <div id="hoverbox-title" class="hoverbox-title">CAFC</div>
-              <div id="hoverboxcontent" class="hoverbox-content">
-                <h3 class="mb-2">Child and Family Consultancy</h3>
-                <p>
-                  A simple and clean Wordpress webiste design which allows the
-                  organisation to update their own content.
-                </p>
-                <a
-                  href="http://www.cafc.ie"
-                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
-                  target="_blank"
-                  >View live project</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
-            <div
-              class="hoverbox"
-              style="background-image: url('/img/superg.jpg')"
-              title="The Super Website Design"
-            >
-              <div id="hoverbox-title" class="hoverbox-title">
-                The Super Generation
-              </div>
-              <div id="hoverboxcontent" class="hoverbox-content">
-                <h3 class="mb-2">The Super Generation</h3>
-                <p>
-                  Website design with integration of Arlo Event Booking System
-                  and and their sister company's e-commerce store.
-                </p>
-                <a
-                  href="https://www.thesupergeneration.com/"
-                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
-                  target="_blank"
-                  >View live project</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div data-aos="fade-left" class="col-12 col-lg-6 mb-4">
-            <div
-              class="hoverbox"
-              style="background-image: url('/img/leonandcroft.jpg')"
-              title="Leon and Croft Website Design"
-            >
-              <div id="hoverbox-title" class="hoverbox-title">
-                Leon and Croft
-              </div>
-              <div id="hoverboxcontent" class="hoverbox-content">
-                <h3 class="mb-2">Bromptom Wine</h3>
-                <p>
-                  An emphasis on photography to show off the portfolio of work
-                  of this award-winning interior design company.
-                </p>
-                <a
-                  href="https://www.leonandcroft.com"
-                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
-                  target="_blank"
-                  >View live project</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div data-aos="fade-right" class="col-12 col-lg-6 mb-4">
-            <div
-              class="hoverbox"
-              style="background-image: url('/img/nigel.webp')"
-              title="Nigel Cheney Website Design"
-            >
-              <div id="hoverbox-title" class="hoverbox-title">Nigel Cheney</div>
-              <div id="hoverboxcontent" class="hoverbox-content">
-                <h3 class="mb-2">Nigel Cheney</h3>
-                <p>
-                  This Wordpress site uses WooCommerce to allow this UK-Based
-                  artist to sell his work.
-                </p>
-                <a
-                  href="https://www.nigelcheney.com"
-                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
-                  target="_blank"
-                  >View live project</a
-                >
-              </div>
-            </div>
-          </div>
-
           <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
             <div
               class="hoverbox"
@@ -627,6 +554,116 @@
               </div>
             </div>
           </div>
+        </div>
+
+
+
+        <!-- WORDPRESS PROJECTS SECTION -->
+        <div class="row pb-5 my-lg-5">
+          <div class="col-12 py-lg-5">
+            <h3 class="mt-5 subhead">Wordpress Website Designer and Developer, Ireland</h3>
+            <h2 class="display-1">WordPress Websites</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div data-aos="fade-up" class="col-12 col-lg-6 mb-4">
+            <div
+              class="hoverbox"
+              style="background-image: url('/img/cafc.jpg')"
+              title="CAFC Website Design"
+            >
+              <div id="hoverbox-title" class="hoverbox-title">CAFC</div>
+              <div id="hoverboxcontent" class="hoverbox-content">
+                <h3 class="mb-2">Child and Family Consultancy</h3>
+                <p>
+                  A simple and clean Wordpress webiste design which allows the
+                  organisation to update their own content.
+                </p>
+                <a
+                  href="http://www.cafc.ie"
+                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
+                  target="_blank"
+                  >View live project</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div data-aos="fade-up" class="col-12 col-lg-6 mb-4">
+            <div
+              class="hoverbox"
+              style="background-image: url('/img/superg.jpg')"
+              title="The Super Website Design"
+            >
+              <div id="hoverbox-title" class="hoverbox-title">
+                The Super Generation
+              </div>
+              <div id="hoverboxcontent" class="hoverbox-content">
+                <h3 class="mb-2">The Super Generation</h3>
+                <p>
+                  Website design with integration of Arlo Event Booking System
+                  and and their sister company's e-commerce store.
+                </p>
+                <a
+                  href="https://www.thesupergeneration.com/"
+                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
+                  target="_blank"
+                  >View live project</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div data-aos="fade-left" class="col-12 col-lg-6 mb-4">
+            <div
+              class="hoverbox"
+              style="background-image: url('/img/leonandcroft.jpg')"
+              title="Leon and Croft Website Design"
+            >
+              <div id="hoverbox-title" class="hoverbox-title">
+                Leon and Croft
+              </div>
+              <div id="hoverboxcontent" class="hoverbox-content">
+                <h3 class="mb-2">Leon and Croft</h3>
+                <p>
+                  An emphasis on photography to show off the portfolio of work
+                  of this award-winning interior design company.
+                </p>
+                <a
+                  href="https://www.leonandcroft.com"
+                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
+                  target="_blank"
+                  >View live project</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div data-aos="fade-right" class="col-12 col-lg-6 mb-4">
+            <div
+              class="hoverbox"
+              style="background-image: url('/img/nigel.webp')"
+              title="Nigel Cheney Website Design"
+            >
+              <div id="hoverbox-title" class="hoverbox-title">Nigel Cheney</div>
+              <div id="hoverboxcontent" class="hoverbox-content">
+                <h3 class="mb-2">Nigel Cheney</h3>
+                <p>
+                  This Wordpress site uses WooCommerce to allow this UK-Based
+                  artist to sell his work.
+                </p>
+                <a
+                  href="https://www.nigelcheney.com"
+                  class="btn btn-outline-light rounded-0 text-uppercase mt-3"
+                  target="_blank"
+                  >View live project</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
         </div>
       </section>
 
@@ -878,7 +915,14 @@
       });
 
       $(document).ready(function () {
-        $(".owl-carousel").owlCarousel();
+        $(".owl-carousel").owlCarousel({
+          items: 1,
+          loop: true,
+          dots: true,
+          autoplay: true,
+          autoplaySpeed: 1200,
+          animateOut: "fadeOut",
+        });
       });
     </script>
   </body>
