images and slider in modal

--- a/index.html
+++ b/index.html
@@ -332,36 +332,36 @@
 
         <!-- Altra Modal -->
         <div class="modal fade" id="altraModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg">
+          <div class="modal-dialog modal-xl">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="title">Hello Altra Website</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <div class="owl-carousel owl-theme">
+                <div class="owl-altra owl-carousel owl-theme">
                   <div class="item">
                     <picture>
-                      <source srcset="/src/img/altra-1.webp" type="image/webp" />
-                      <img src="/src/img/altra-1.png" />
+                      <source srcset="/img/altra-1.webp" type="image/webp" />
+                      <img src="/img/altra-1.png" />
                     </picture>
                   </div>
                   <div class="item">
                     <picture>
-                      <source srcset="/src/img/altra-2.webp" type="image/webp" />
-                      <img src="/src/img/altra-2.png" />
+                      <source srcset="/img/altra-2.webp" type="image/webp" />
+                      <img src="/img/altra-2.png" />
                     </picture>
                   </div>
                   <div class="item">
                     <picture>
-                      <source srcset="/src/img/altra-3.webp" type="image/webp" />
-                      <img src="/src/img/altra-3.png" />
+                      <source srcset="/img/altra-3.webp" type="image/webp" />
+                      <img src="/img/altra-3.png" />
                     </picture>
                   </div>
                   <div class="item">
                     <picture>
-                      <source srcset="/src/img/altra-4.webp" type="image/webp" />
-                      <img src="/src/img/altra-4.png" />
+                      <source srcset="/img/altra-4.webp" type="image/webp" />
+                      <img src="/img/altra-4.png" />
                     </picture>
                   </div>
                 </div>
@@ -482,7 +482,7 @@
 
         <div class="row">
           <div data-aos="fade-right" class="col-12 position-relative">
-            <div class="owl-carousel owl-theme">
+            <div class="owl-vegan owl-carousel owl-theme">
               <div class="item bg-pink">
                 <picture>
                   <source srcset="/img/takeaway-1.webp" type="image/webp" />
@@ -955,14 +955,25 @@
       });
 
       $(document).ready(function () {
-        $(".owl-carousel").owlCarousel({
+
+        $(".owl-altra").owlCarousel({
           items: 1,
+          nav: true,
           loop: true,
           dots: true,
           autoplay: true,
           autoplaySpeed: 1200,
+        });
+
+        $(".owl-vegan").owlCarousel({
+          items: 1,
+          loop: true,
+          dots: true,
+          autoplay: true,
+          autoplaySpeed: 1000,
           animateOut: "fadeOut",
         });
+
       });
     </script>
   </body>
