--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
 
     <script>
       AOS.init({
-        duration: 1200,
+        duration: 1000,
         disable: "mobile",
       });
 
@@ -962,15 +962,18 @@
           loop: true,
           dots: true,
           autoplay: true,
-          autoplaySpeed: 1200,
+          autoplaySpeed: 250,
+          lazyLoad: true,
+          autoplayHoverPause: true,
         });
 
         $(".owl-vegan").owlCarousel({
           items: 1,
           loop: true,
           dots: true,
+          dotsEach: true,
           autoplay: true,
-          autoplaySpeed: 1000,
+          autoplaySpeed: 250,
           animateOut: "fadeOut",
         });
 
